<resources>
    <string name="app_name" translatable="false">BankAssetsApp</string>
    <string name="goBfack" translatable="false">返回</string>
    <string name="Login" translatable="false">登录</string>
    <string name="company_zh" translatable="false">技术支持：山西巨安电子技术股份有限公司</string>
    <string name="company_Eg" translatable="false">Copyright © 2019 All Rights Reserved</string>
    <string name="enter_account" translatable="false">请输入账号</string>
    <string name="enter_password" translatable="false">请输入密码</string>
    <string name="assetsTotal" translatable="false">资产净值（元）</string>
    <string name="assetsQuantity" translatable="false">资产总数（件）</string>
    <string name="monthlyDatakanban" translatable="false">月度数据看板</string>
    <string name="departmentAssetAtatistics" translatable="false">部门资产统计</string>
    <string name="functionModule" translatable="false">功能模块</string>
    <string name="monthPurchaseQuantity" translatable="false">本月采购数量</string>
    <string name="monthAllocationQuantity" translatable="false">本月调拨数量</string>
    <string name="monthCountingTimes" translatable="false">本月盘点次数</string>
    <string name="monthWarrantyQuantity" translatable="false">本月报修数量</string>
    <string name="monthInspectionQuantity" translatable="false">本月巡检数量</string>
    <string name="monthDisposalQuantity" translatable="false">本月处置数量</string>
    <string name="homePage" translatable="false">首页</string>
    <string name="userInfo" translatable="false">我的</string>
    <string name="scanCodeQuery" translatable="false">扫码查询</string>
    <string name="readyToDoNews" translatable="false">待办消息</string>
    <string name="readyToDoNewsCheckAccept" translatable="false">您有1条代办消息，请查收~</string>
    <string name="readyNoNewsCheckAccept" translatable="false">今日暂无新通知~</string>
    <string name="enterAssetsName" translatable="false">请输入资产名称</string>
    <string name="assetsName" translatable="false">资产名称</string>
    <string name="assetsNameText" translatable="false">资产名称：</string>
    <string name="shenqingbumen" translatable="false">申请部门：</string>
    <string name="zhuangtai" translatable="false">维修状态：</string>
    <string name="yewuliucheng" translatable="false">业务类型：</string>
    <string name="zhanghao" translatable="false">账号：</string>
    <string name="specialModel" translatable="false">规格型号</string>
    <string name="enterSpecialModel" translatable="false">请输入规格型号</string>
    <string name="meteringCompany" translatable="false">计量单位</string>
    <string name="enterMeteringCompany" translatable="false">请输入计量单位</string>
    <string name="productBrand" translatable="false">产品品牌</string>
    <string name="enterProductBrand" translatable="false">请输入产品品牌</string>
    <string name="purchaseUnitPrice" translatable="false">采购单价</string>
    <string name="enterPurchaseUnitPrice" translatable="false">请输入采购单价</string>
    <string name="element" translatable="false">元</string>
    <string name="supplierName" translatable="false">供应商名称</string>
    <string name="supplierNameText" translatable="false">供应商名：</string>
    <string name="enterSupplierName" translatable="false">请输入供应商名称</string>
    <string name="purpose" translatable="false">用途</string>
    <string name="purposeText" translatable="false">用途：</string>
    <string name="enterPurpose" translatable="false">请输入用途</string>
    <string name="adminDepartment" translatable="false">管理部门</string>
    <string name="adminDepartmentText" translatable="false">管理部门：</string>
    <string name="liuchenghuanjie" translatable="false">流程环节：</string>
    <string name="chuzhiyuanyin" translatable="false">处置原因：</string>
    <string name="enterSelectAdminDepartment" translatable="false">请选择管理部门</string>
    <string name="purchaseQuantity" translatable="false">采购数量</string>
    <string name="purchaseQuantityText" translatable="false">采购数量：</string>
    <string name="enterPurchaseQuantity" translatable="false">请输入采购数量</string>
    <string name="submit" translatable="false">提交</string>
    <string name="purchaseApply" translatable="false">采购申请</string>
    <string name="cancel" translatable="false">取消</string>
    <string name="purchaseNewAdd" translatable="false">采购新增</string>
    <string name="submitAudit" translatable="false">提交审核</string>
    <string name="inAudit" translatable="false">审核中</string>
    <string name="brand" translatable="false">品牌：</string>
    <string name="specsModel" translatable="false">规格型号：</string>
    <string name="Company" translatable="false">单位：</string>
    <string name="unitPurchasePrice" translatable="false">采购单价：</string>
    <string name="agree" translatable="false">同意</string>
    <string name="unAgree" translatable="false">拒绝</string>
    <string name="edit" translatable="false">编辑</string>
    <string name="addAssets" translatable="false">添加资产</string>
    <string name="confirm" translatable="false">确认</string>
    <string name="code" translatable="false">编码：</string>
    <string name="assetsCode" translatable="false">资产编码：</string>
    <string name="category" translatable="false">类别：</string>
    <string name="outDepartment" translatable="false">调出部门：</string>
    <string name="outDepartmentText" translatable="false">调出部门</string>
    <string name="source" translatable="false">来源：</string>
    <string name="putDepartment" translatable="false">调入部门：</string>
    <string name="putDepartmentText" translatable="false">调入部门</string>
    <string name="chuyiyuanyin" translatable="false">处置原因</string>
    <string name="originalValue" translatable="false">原值</string>
    <string name="useDate" translatable="false">使用日期：</string>
    <string name="netWorth" translatable="false">净值</string>
    <string name="netWorthText" translatable="false">净值：</string>
    <string name="surplusTerm" translatable="false">剩余期限：</string>
    <string name="assetTraceCode" translatable="false">资产追溯码</string>
    <string name="assetTraceCodeText" translatable="false">资产追溯码：</string>
    <string name="enterAssetTraceCode" translatable="false">请输入资产追溯码</string>
    <string name="assetCode" translatable="false">资产编码</string>
    <string name="enterAssetCode" translatable="false">请输入资产编码</string>
    <string name="assetClass" translatable="false">资产类别</string>
    <string name="enterAssetClass" translatable="false">请输入资产类别</string>
    <string name="enterAdminDepartment" translatable="false">请输入管理部门</string>
    <string name="enterOutDepartmentText" translatable="false">请输入调出部门</string>
    <string name="enterPutDepartment" translatable="false">请输入调入部门</string>
    <string name="sourceText" translatable="false">来源</string>
    <string name="enterSource" translatable="false">请输入来源</string>
    <string name="startUseDate" translatable="false">开始使用日期</string>
    <string name="enterStartUseDate" translatable="false">请输入开始使用日期</string>
    <string name="remainingPeriod" translatable="false">剩余期限</string>
    <string name="enterRemainingPeriod" translatable="false">请输入剩余期限</string>
    <string name="originalValueText" translatable="false">原值：</string>
    <string name="enterOriginalValue" translatable="false">请输入原值</string>
    <string name="enterNetWorth" translatable="false">请输入净值</string>
    <string name="noInventory" translatable="false">未盘点</string>
    <string name="yesInventory" translatable="false">已盘点</string>
    <string name="oddNumber" translatable="false">单号：</string>
    <string name="useDepartmentText" translatable="false">使用部门</string>
    <string name="useDepartment" translatable="false">使用部门：</string>
    <string name="shenqingyonghu" translatable="false">申请用户：</string>
    <string name="assetsAllTotal" translatable="false">资产总数：</string>
    <string name="inventoryTime" translatable="false">盘点时间：</string>
    <string name="inventoryDepartment" translatable="false">盘点部门：</string>
    <string name="inventoryPerson" translatable="false">盘点人：</string>
    <string name="inventoryResults" translatable="false">盘点结果：</string>
    <string name="inventoryType" translatable="false">盘点类型：</string>
    <string name="inventoryVolume" translatable="false">盘盈数量：</string>
    <string name="inventoryLossesQuantity" translatable="false">盘亏数量：</string>
    <string name="inventoryState" translatable="false">盘点状态：</string>
    <string name="doubleCheck" translatable="false">是否复盘：</string>
    <string name="inventorySurplusAssets" translatable="false">盘盈资产</string>
    <string name="inventoryLossAssets" translatable="false">盘亏资产</string>
    <string name="assetsNumber" translatable="false">资产编号：</string>
    <string name="weixiuDanhao" translatable="false">维修单号：</string>
    <string name="shenqingren" translatable="false">申请人：</string>
    <string name="storageAddress" translatable="false">存放地址：</string>
    <string name="enterSelectAssetsName" translatable="false">请选择资产名称</string>
    <string name="disposeType" translatable="false">处置类型</string>
    <string name="enterUseDepartment" translatable="false">请输入使用部门</string>
    <string name="disposalReason" translatable="false">处置原因</string>
    <string name="disposalAttr" translatable="false">处置附件</string>
    <string name="lossReport" translatable="false">报损报告</string>
    <string name="identificationAnnex" translatable="false">鉴定附件</string>
    <string name="appraisalOpinion" translatable="false">鉴定意见</string>
    <string name="enterAppraisalOpinion" translatable="false">请输入鉴定意见</string>
    <string name="appearanceCondition" translatable="false">外观状况</string>
    <string name="chuzhileiing" translatable="false">处置类型：</string>
    <string name="chuzhimiaoshu" translatable="false">处置描述：</string>
    <string name="chuangjianshijian" translatable="false">创建时间：</string>
    <string name="intact" translatable="false">完好</string>
    <string name="baofei" translatable="false">报废</string>
    <string name="juanzeng" translatable="false">捐赠</string>
    <string name="chushou" translatable="false">出售</string>
    <string name="damage" translatable="false">损坏</string>
    <string name="functionalAtatus" translatable="false">功能状况</string>
    <string name="normal" translatable="false">正常</string>
    <string name="abnormal" translatable="false">异常</string>
    <string name="inspectionResults" translatable="false">巡检结果</string>
    <string name="reachingStandard" translatable="false">达标</string>
    <string name="noReachingStandard" translatable="false">不达标</string>
    <string name="uploadDevicePictures" translatable="false">上传设备图片</string>
    <string name="uploadNotes" translatable="false">照片大小为200k以内，照片格式为png、jpg格式</string>
    <string name="repairMode" translatable="false">维修方式</string>
    <string name="localRepair" translatable="false">本地维修</string>
    <string name="externalRepair" translatable="false">委外维修</string>
    <string name="giveRepairMode" translatable="false">送修方式</string>
    <string name="door" translatable="false">上门</string>
    <string name="giveRepair" translatable="false">送修</string>
    <string name="serviceProviderName" translatable="false">服务商名称</string>
    <string name="enterServiceProviderName" translatable="false">请输入服务商名称</string>
    <string name="address" translatable="false">地址</string>
    <string name="enterAddress" translatable="false">请输入地址</string>
    <string name="enterContacts" translatable="false">请输入联系人</string>
    <string name="contacts" translatable="false">联系人</string>
    <string name="enterPhone" translatable="false">请输入电话</string>
    <string name="phone" translatable="false">电话</string>
    <string name="repairAddress" translatable="false">送修地址</string>
    <string name="enterRepairAddress" translatable="false">请输入送修地址</string>
    <string name="logout" translatable="false">退出</string>
    <string name="selectDepartment" translatable="false">选择部门</string>
    <string name="selectAdminDepartment" translatable="false">选择管理部门</string>
    <string name="selectBranch" translatable="false">选择支行</string>
    <string name="selectDepartmentOrBranch" translatable="false">选择部门或支行</string>
    <string name="noAssetsText" translatable="false">暂时没有资产</string>
</resources>