<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <View
        android:layout_width="match_parent"
        android:layout_height="20dp"
        android:background="@color/title_color"

        />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/title_color"
        android:gravity="center_vertical"
        android:paddingLeft="12dp"
        android:paddingTop="10dp"
        android:paddingRight="12dp"
        android:paddingBottom="10dp">

        <RelativeLayout
            android:id="@+id/iv_back"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <ImageView
                android:id="@+id/iv_back_temp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:paddingRight="10dp"

                android:src="@drawable/icon_back_white" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/titleLeftTextBack"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_toRightOf="@+id/iv_back_temp"
                android:gravity="center"
                android:text="@string/goBfack"
                android:textColor="@color/white" />
        </RelativeLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:layout_gravity="center"
            android:gravity="center"
            android:text="扫码查询"
            android:textColor="#fff"
            android:textSize="18sp" />


    </RelativeLayout>

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#fff">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:paddingBottom="@dimen/margin_100">

            <LinearLayout style="@style/itemLinear">

                <TextView
                    style="@style/itemStartTV"
                    android:text="@string/assetsName" />

                <TextView
                    android:id="@+id/sweepCodeAssetsNameTV"
                    style="@style/itemEndTV"
                    android:hint="@string/enterAssetsName"
                    android:text="" />
            </LinearLayout>

            <LinearLayout style="@style/itemLinear">

                <TextView
                    style="@style/itemStartTV"
                    android:text="@string/assetTraceCode" />

                <TextView
                    android:id="@+id/sweepCodeAssetTraceCodeTV"
                    style="@style/itemEndTV"
                    android:hint="@string/enterAssetTraceCode"
                    android:text="" />
            </LinearLayout>

            <LinearLayout style="@style/itemLinear">

                <TextView
                    style="@style/itemStartTV"
                    android:text="@string/assetCode" />

                <TextView
                    android:id="@+id/sweepCodeAssetCodeTV"
                    style="@style/itemEndTV"
                    android:hint="@string/enterAssetCode"
                    android:text="" />
            </LinearLayout>

            <LinearLayout style="@style/itemLinear">

                <TextView
                    style="@style/itemStartTV"
                    android:text="@string/assetClass" />

                <TextView
                    android:id="@+id/sweepCodeAssetClassTV"
                    style="@style/itemEndTV"
                    android:hint="@string/enterAssetClass"
                    android:text="" />
            </LinearLayout>

            <LinearLayout style="@style/itemLinear">

                <TextView
                    style="@style/itemStartTV"
                    android:text="@string/adminDepartment" />

                <TextView
                    android:id="@+id/sweepCodeAdminDepartmentTV"
                    style="@style/itemEndTV"
                    android:hint="@string/enterAdminDepartment"
                    android:text="" />
            </LinearLayout>


            <LinearLayout style="@style/itemLinear">

                <TextView
                    style="@style/itemStartTV"
                    android:text="@string/sourceText" />

                <TextView
                    android:id="@+id/sweepCodeSourceTV"
                    style="@style/itemEndTV"
                    android:hint="@string/enterSource"
                    android:text="" />
            </LinearLayout>

            <LinearLayout style="@style/itemLinear">

                <TextView
                    style="@style/itemStartTV"
                    android:text="@string/startUseDate" />

                <TextView
                    android:id="@+id/sweepCodeStartUseDateTV"
                    style="@style/itemEndTV"
                    android:hint="@string/enterStartUseDate"
                    android:text="" />
            </LinearLayout>

            <LinearLayout style="@style/itemLinear">

                <TextView
                    style="@style/itemStartTV"
                    android:text="@string/remainingPeriod" />

                <TextView
                    android:id="@+id/sweepCodeRemainingPeriodTV"
                    style="@style/itemEndTV"
                    android:hint="@string/enterRemainingPeriod"
                    android:text="" />
            </LinearLayout>

            <LinearLayout style="@style/itemLinear">

                <TextView
                    style="@style/itemStartTV"
                    android:text="@string/originalValue" />

                <TextView
                    android:id="@+id/sweepCodeOriginalValueTV"
                    style="@style/itemEndTV"
                    android:hint="@string/enterOriginalValue"
                    android:text="" />
            </LinearLayout>

            <LinearLayout style="@style/itemLinear">

                <TextView
                    style="@style/itemStartTV"
                    android:text="@string/netWorth" />

                <TextView
                    android:id="@+id/sweepCodeNetWorthTV"
                    style="@style/itemEndTV"
                    android:hint="@string/enterNetWorth"
                    android:text="" />
            </LinearLayout>
        </LinearLayout>
    </androidx.core.widget.NestedScrollView>
</LinearLayout>


